--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= "Hola Mundo" %>
-<p>Login <%= link_to "here", "about" %> </p>
+<div class="jumbotron">
+	<h1>Welcome to my app!</h1>
+	Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
+</div>
