--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,8 @@
+
+
 <nav class="navbar navbar-static-top navbar-default" role="navigation">
+  <div class="container-fluid">
+
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -23,6 +27,13 @@
             <li><%= link_to "Sign in", new_user_session_path %></li>
 
           <% end %>
+
+            </div>
+         
+
     </ul>
+
   </div><!-- /.navbar-collapse -->
+
+ </div>
 </nav>
