--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -4,7 +4,9 @@
   <thead>
     <tr>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -12,7 +14,7 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
-        <td><%= link_to 'Show', pin %></td>
+        <td><%= link_to 'Show', pin_path(pin) %></td>
         <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
         <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
